--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-  "dependencies": {
-    "@tailwindcss/postcss": "^4.1.14",
-    "regenerator-runtime": "^0.14.1"
-  },
   "devDependencies": {
-    "@hotwired/stimulus": "^3.0.0",
-    "@hotwired/turbo": "^7.3.0",
-    "@symfony/stimulus-bridge": "^4.0.1",
-    "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
-    "@symfony/webpack-encore": "^2.1.0",
-    "autoprefixer": "^10.4.21",
-    "core-js": "^3.45.1",
-    "file-loader": "^6.2.0",
-    "postcss": "^8.5.6",
-    "postcss-loader": "^6.2.1",
-    "tailwindcss": "^4.1.14"
+      "@babel/core": "^7.17.0",
+      "@babel/preset-env": "^7.16.0",
+      "@hotwired/stimulus": "^3.0.0",
+      "@hotwired/turbo": "^7.1.0 || ^8.0",
+      "@symfony/stimulus-bridge": "^4.0.1",
+      "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
+      "@symfony/webpack-encore": "^5.2.0",
+      "core-js": "^3.45.1",
+      "file-loader": "^6.2.0",
+      "regenerator-runtime": "^0.13.11",
+      "webpack": "^5.74.0",
+      "webpack-cli": "^5.1.0"
   },
+  "license": "UNLICENSED",
+  "private": true,
   "scripts": {
-    "dev": "encore dev",
-    "watch": "encore dev --watch",
-    "build": "encore production"
+      "dev-server": "encore dev-server",
+      "dev": "encore dev",
+      "watch": "encore dev --watch",
+      "build": "encore production --progress"
+  },
+  "dependencies": {
+      "@tailwindcss/postcss": "^4.1.13",
+      "autoprefixer": "^10.4.21",
+      "postcss": "^8.5.6",
+      "postcss-loader": "^8.2.0",
+      "tailwindcss": "^4.1.14"
   }
 }
