--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=
+APP_SECRET=123456789098765432ertyff
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -26,7 +26,8 @@ APP_SECRET=
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="mysql://hoteluser:hotelpass@symfony_db:3306/HotelDiongcoDB"
+DATABASE_URL="mysql://hoteluser:hotelpass@db:3306/HotelDiongcoDB"
+
 
 
 ###< doctrine/doctrine-bundle ###
