add activity logs

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -46,6 +46,7 @@ security:
         - { path: ^/user/.*/disable, roles: ['ROLE_ADMIN'] }
         - { path: ^/history, roles: ['ROLE_ADMIN'] }
         - { path: ^/user$, roles: ['ROLE_ADMIN'] }
+        - { path: ^/activity-log, roles: ['ROLE_ADMIN'] }
       
        
         
